# opsick

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build.sh  doxyfile  test.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: to-do.md
docs/: annotated.html  classes.html  config_8h.html  config_8h__incl.md5  config_8h_source.html  constants_8h.html  constants_8h__dep__incl.md5  constants_8h_source.html  db_8h.html  db_8h__incl.md5  db_8h_source.html  dir_33f42f2909a819ca4e752310670f88fa.html  dir_d44c64559bbebec7f509842c48db8b23.html  endpoints_8h.html  endpoints_8h__incl.md5  endpoints_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  guid_8h.html  guid_8h__incl.md5  guid_8h_source.html  index.html  keys_8h.html  keys_8h__incl.md5  keys_8h_source.html  menudata.js  murmur3_8h_source.html  router_8h.html  router_8h__incl.md5  router_8h_source.html  strncmpic_8h.html  strncmpic_8h__incl.md5  strncmpic_8h_source.html  structopsick__config__adminsettings-members.html  (+16 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+1 more)
include/opsick/: config.h  constants.h  db.h  endpoints.h  guid.h  keys.h  murmur3.h  router.h  strncmpic.h  user.h  util.h
include/opsick/endpoints/: home.h  passwd.h  prvkey.h  pubkey.h  user2fa.h  useradd.h  userbody.h  userdel.h  userext.h  userget.h  version.h
include/opsick/sql/: db_migrations.h  users.h
setup/: README.md  opsick-nginx.conf  opsick.service
setup/nginx/: opsick.conf
src/: config.c  config.toml  db.c  endpoints.c  guid.c  index.html  keys.c  main.c  murmur3.c  router.c  strncmpic.c  util.c
src/endpoints/: home.c  passwd.c  prvkey.c  pubkey.c  user2fa.c  useradd.c  userbody.c  userdel.c  userext.c  userget.c  version.c
src/sql/: users.c
tests/: tests.c
